fixed issue with overflow in container with before and after elements

--- a/app/(site)/styles/main.scss
+++ b/app/(site)/styles/main.scss
@@ -16,6 +16,9 @@
 @import 'components/marquee';
 @import 'components/menu';
 
+body {
+  min-width: 340px;
+}
 
 .container {
   margin: 0 auto;
