--- a/app/(site)/styles/sections/hero.scss
+++ b/app/(site)/styles/sections/hero.scss
@@ -1,3 +1,7 @@
+#hero {
+  overflow: hidden;
+}
+
 .hero {
   position: relative;
   display: flex;
