--- a/app/(site)/styles/sections/price.scss
+++ b/app/(site)/styles/sections/price.scss
@@ -1,9 +1,29 @@
 #price {
   position: relative;
+  overflow: hidden;
 }
 
 .price {
   padding: $whitespace-80 0;
+
+  &::before {
+    content: '';
+    z-index: -1;
+    position: absolute;
+    left: -200px;
+    width: 462px;
+    height: 540px;
+    transform: rotate(-0.459deg);
+    border-radius: 624px;
+    opacity: 0.5;
+    background: $gradient;
+    filter: blur(60px);
+
+    @include forMobile {
+      left: -300px;
+      height: 400px;
+    }
+  }
 
   @include forMobile {
     padding: $whitespace-40 0 $whitespace-60;
@@ -13,6 +33,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    position: relative;
     padding-bottom: 60px;
 
     @include forMobile {
